# Pydoxine

./: .gitmodules  AUTHORS.txt  LICENSE.txt  README.md  merge-subtree-notes
CMake/: FindSphinx.cmake  PythonDocstrings.cmake
breathe/: LICENSE  directives.py  doxygen_mangling.py
breathe/renderer/: sphinxrenderer.py
doc/: Changelog.md
docstrings/: build.py.in  sphinx_conf.py.in  wrapping.cfg.in
docstrings/cpp/: docstrings.cpp.in  docstrings.h.in
docstrings/sphinx_ext/: cpp_docstrings.py  xml2rst.xsl
example/: .gitexternals  CMakeLists.txt  example.h
example/python/: CMakeLists.txt  __init__.py  example.cpp
